--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BidMaster - Charity Auction Manager</title>
+  <title>Charity Auction Manager</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -102,7 +102,7 @@
 </head>
 
 <body>
-  <h1> Charity Auction Manager</h1>
+  <h1>  Charity Auction Manager</h1>
 
   <div class="controls">
     <button>Add Item</button>
@@ -114,20 +114,20 @@
 
   <div class="grid">
     <div class="section">
-      <h2>Items to be Auctioned</h2>
+      <h2>Items to be Auctioned:</h2>
       <table>
-        <tr><th>Name</th><th>Description</th><th>Initial Price</th></tr>
-        <tr><td>Guitar</td><td>Signed by Band</td><td>$100</td></tr>
-        <tr><td>Book</td><td>First Edition</td><td>$50</td></tr>
+        <tr><th>Name</th><th>Description</th><th>Start Price</th></tr>
+        <tr><td>Guitar</td><td>John Bovi </td><td>$100</td></tr>
+        <tr><td>1st Editionm Book</td><td> Harry Potter </td><td>$50</td></tr>
       </table>
     </div>
 
     <div class="section">
-      <h2>Items Sold</h2>
+      <h2>Items Sold:</h2>
       <table>
         <tr><th>Name</th><th>Winner</th><th>Final Price</th></tr>
-        <tr><td>Painting</td><td>Alice</td><td>$250</td></tr>
-        <tr><td>Vase</td><td>Bob</td><td>$120</td></tr>
+        <tr><td> 16th Century Painting</td><td>Kat</td><td>$250</td></tr>
+        <tr><td>Civil War Map of North America</td><td>Barry</td><td>$120</td></tr>
       </table>
     </div>
   </div>
@@ -150,7 +150,7 @@
   </div>
 
   <div class="footer">
-    CS 3733 - Individual Project (IP.1) | Author: Nicholas Driscoll | October 2025
+   Nicholas Driscoll | October 2025 
   </div>
 </body>
 </html>
