--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       text-align: center;
       font-weight: bold;
       font-size: 1.2em;
-      color: #155724;
-      background-color: #d4edda;
+      color: #e2e7e3c2;
+      background-color: #155724;
       padding: 10px;
       border-radius: 6px;
     }
