--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
 
   <div class="section">
     <h2>Current Item Being Auctioned</h2>
-    <p><strong>Item:</strong> Vintage Watch – Antique gold timepiece</p>
+    <p><strong>Item:</strong> Vintage Watch – 18th Century gold timepiece</p>
     <p><strong>Initial Price:</strong> $300</p>
 
     <h3>Current Bids</h3>
     <ul>
-      <li>Charlie – $500</li>
-      <li>Alice – $450</li>
-      <li>Bob – $400</li>
+      <li>Bruce – $500</li>
+      <li>Diane – $450</li>
+      <li>Clark – $400</li>
     </ul>
   </div>
 
   <div class="total">
-    Total Funds Raised: $1,200
+    Total Funds Raised: $ 3000
   </div>
 
   <div class="footer">
