--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     .controls button {
       margin: 5px;
       padding: 8px 14px;
-      background-color: #0d6efd;
+      background-color: #d7a70b;
       color: white;
       border: none;
       border-radius: 4px;
@@ -34,7 +34,7 @@
     }
 
     .controls button:hover {
-      background-color: #0b5ed7;
+      background-color: #d7a70b;
     }
 
     .grid {
@@ -105,11 +105,35 @@
       font-size: 0.9em;
       color: #aaa;
     }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .login-btn {
+      padding: 8px 16px;
+      background-color: #6c757d;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 0.9em;
+    }
+
+    .login-btn:hover {
+      background-color: #5a6268;
+    }
   </style>
 </head>
 
 <body>
-  <h1>  Charity Auction Manager</h1>
+  <div class="header">
+    <h1>  Charity Auction Manager</h1>
+    <button class="login-btn">Login</button>
+  </div>
 
   <div class="total">
     Total Funds Raised: $ 3000
